--- a/Research Project/intro.qmd
+++ b/Research Project/intro.qmd
@@ -6,3 +6,5 @@ import pandas as pd, numpy as np, matplotlib.pyplot as plt
 ```
 
 Here's our introductory section
+
+Here is the first check from Uttara
